[package]
name = "oddiag"
version = "0.1.0"
authors = ["Dustin Riley <dustin@derpenstiltskin.com>"]
license = "MIT"
readme = "README.md"
description = "OneDrive utility written in Rust."
homepage = "https://github.com/derpenstiltskin/oddiag"
repository = "https://github.com/derpenstiltskin/oddiag"
keywords = ["onedrive"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
winreg = { version = "0.10" }
jwalk = { version = "0.6" }
chrono = { version = "0.4" }
csv = { version = "1.1" }
clap = { version = "3.2" }
normpath = { version = "0.3" }
#nwg = { version = "1.0", package = "native-windows-gui" }
#nwd = { version = "1.0", package = "native-windows-derive" }